--- a/public/css/homeMobile.css
+++ b/public/css/homeMobile.css
@@ -8,7 +8,7 @@
     /*centralizando conteúdo*/
     width: 50rem;
     flex: 1;
-    margin: auto;
+    margin: 3rem auto;
 }
 
 .welcomeMessage, .homeTitle {
@@ -18,7 +18,6 @@
 .welcomeMessage {
     color: var(--corPrincipal);
     font-weight: 700;
-    margin-top: 3rem;
     font-size: 120%;
 }
 
@@ -47,6 +46,7 @@
     
     font-family: var(--fontePrincipal);
     font-size: 1.4rem;
+    font-weight: 600;
 
     cursor: pointer;
     display: flex;
@@ -62,7 +62,11 @@
 }
 
 .primaryButton img {
-    margin-right: 1.6rem;
+    margin-right: 1rem;
+}
+
+.homeImage {
+    margin: 2rem auto;
 }
 
 .homeNumbers {
