--- a/public/css/homeMobile.css
+++ b/public/css/homeMobile.css
@@ -1,3 +1,40 @@
+.homeLinks {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+
+    /*centralizando conteúdo*/
+    width: 50rem;
+    
+    padding: 2rem;
+
+    /*fixa nav no topo*/
+    position: fixed;
+    top: 0;
+    /*desloca nav em 50% do seu tamanho no eixo x, após seu limite esquerdo estar no centro do 50%, centralizando-o no meio da tela*/
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.scroll {
+    position: fixed;
+    top: 0;
+    background: var(--corRealce);
+    width: 100vw;
+    padding: 4rem;
+}
+
+.logo {
+    width: 40%;
+    height: auto;
+}
+
+.barra {
+    width: 150%;
+    height: auto;
+}
+
 .containerMobile {
     display: flex;
     justify-content: center;
@@ -8,7 +45,7 @@
     /*centralizando conteúdo*/
     width: 50rem;
     flex: 1;
-    margin: 3rem auto;
+    margin: 10rem auto;
 }
 
 .welcomeMessage, .homeTitle {
@@ -41,7 +78,7 @@
     border: none;
     border-radius: 3rem;
 
-    background: #3CDC8C;
+    background: var(--corPrincipal);
     color: var(--corRealce);
     
     font-family: var(--fontePrincipal);
@@ -56,7 +93,7 @@
 }
 
 .primaryButton:hover {
-    background: #36CF82;
+    background: var(--corSecundaria);
     transform: scale(1.02);
     transition: transform 200ms;
 }
@@ -67,6 +104,18 @@
 
 .homeImage {
     margin: 2rem auto;
+    width: 60%;
+    height: auto;
+}
+
+.stats {
+    font-size: 125%;
+    background-color: var(--corSombra);
+    padding: 2rem;
+    border-radius: 6rem;
+    /*valor cor box-shadow var(--corTextoSecundaria) em rgb*/
+    box-shadow: 0 0 10px rgba(17, 39, 11, 0.3);
+    margin-bottom: 2rem;
 }
 
 .homeNumbers {
