--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,7 +22,7 @@
 body {
     height: 100vh;
     color: var(--corTexto);
-    background: var(--corRealce);
+    background: var(--corDestaques);
     
     font-family: var(--fontePrincipal);
     font-size: 1.5rem;
