--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,4 +28,10 @@ body {
     font-size: 1.5rem;
     font-weight: 400;
     line-height: 1.25;
+
+    overflow: overlay;
+}
+
+ul {
+    list-style: none;
 }
