--- a/public/css/homeMobile.css
+++ b/public/css/homeMobile.css
@@ -15,6 +15,7 @@
     /*desloca nav em 50% do seu tamanho no eixo x, após seu limite esquerdo estar no centro do 50%, centralizando-o no meio da tela*/
     left: 50%;
     transform: translateX(-50%);
+    z-index: -5;
 }
 
 .logo {
