--- a/public/css/homeMobile.css
+++ b/public/css/homeMobile.css
@@ -6,7 +6,7 @@
 
     /*centralizando conteúdo*/
     width: 50rem;
-    
+    height: 2rem;
     padding: 2rem;
 
     /*fixa nav no topo*/
@@ -15,7 +15,7 @@
     /*desloca nav em 50% do seu tamanho no eixo x, após seu limite esquerdo estar no centro do 50%, centralizando-o no meio da tela*/
     left: 50%;
     transform: translateX(-50%);
-    z-index: -5;
+    z-index: -50;
 }
 
 .logo {
@@ -126,6 +126,7 @@ nav button {
 
 .menuExpanded .logo {
     opacity: 0;
+    visibility: hidden;
 }
 
 .menuExpanded .closeMenu {
@@ -141,7 +142,7 @@ nav button {
     margin: 4rem auto 3rem auto;
     border: none;
     border-radius: 3rem;
-
+    
     background: var(--corDestaques);
     color: var(--corSecundaria);
     
@@ -259,4 +260,52 @@ nav button {
     color: var(--corPrincipal);
     font-weight: 600;
     margin-bottom: 1rem;
+}
+
+footer {
+    background-color: var(--corPrincipal);
+}
+
+footer .containerMobile {
+    margin: 0;
+
+    padding-block: 3rem;
+    
+    text-align: left;
+    color: var(--corRealce);
+
+}
+
+.footerDiv {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+    margin-left: 4rem;
+}
+
+footer img {
+    width: 45%;
+}
+
+footer p {
+    line-height: 1.5;
+}
+
+footer li img {
+    width: 250%;
+}
+
+#backToStart {
+    position: fixed;
+    bottom: 0.8rem;
+    right: 2rem;
+
+    opacity: 0;
+    visibility: hidden;
+}
+
+#backToStart.show {
+    opacity: 1;
+    visibility: visible;
 }
