feat: iniciando estilização desktop

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,6 +50,10 @@ html {
     scroll-behavior: smooth;
 }
 
+section {
+    padding-block: 18rem;
+}
+
 section header h4 {
     font-size: 1rem;
     font-weight: 700;
