--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -3,8 +3,13 @@
 }
 
 #contact header {
-    margin-top: 5rem;
     margin-bottom: 1.6rem;
+    font-family: var(--fonteTitulo);
+}
+
+#contact header h2 {
+    color: var(--corTextoSecundaria);  
+    font-weight: 800;
 }
 
 #contact ul {
