--- a/public/css/homeMobile.css
+++ b/public/css/homeMobile.css
@@ -161,10 +161,10 @@ nav button {
     justify-content: center;
 }
 
+.menuPrimaryButton.active,
 .menuPrimaryButton:hover {
     filter: brightness(1.2);
-    transform: scale(1.02);
-    transition: transform 200ms;
+    transition: filter 200ms;
 }
 
 /*main content*/
@@ -183,6 +183,16 @@ nav button {
 }
 
 
+
+/*---------------------------------------------------------------------*/
+
+.contentHome {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1;
+    align-items: center;
+}
 
 .welcomeMessage, 
 .homeTitle {
@@ -246,12 +256,18 @@ nav button {
 }
 
 .stats {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
     font-size: 125%;
     background-color: var(--corSombra);
     padding: 2rem 4rem;
     border-radius: 6rem;
     /*valor cor box-shadow var(--corTextoSecundaria) em rgb*/
     box-shadow: 0 0 10px rgba(17, 39, 11, 0.3);
+
+    margin: 0 8rem;
 }
 
 .homeNumbers {
