--- a/public/css/responsividade.css
+++ b/public/css/responsividade.css
@@ -9,6 +9,12 @@
     }
 }
 
+@media (max-width: 1024px) {
+    body {
+        width: 100vw;
+    }
+}
+
 @media (min-width: 1024px) {
 
     section {
